@@ -4,6 +4,7 @@
  * (CQL) update grammar to require key clause in DELETE statement
    (CASSANDRA-3349)
  * (CQL) allow numeric keyspace names in USE statement (CASSANDRA-3350)
+ * (Hadoop) skip empty rows when slicing the entire row (CASSANDRA-2855)
 
 
 0.8.7
